# sitehub-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml  docker-compose.dev.yml  docker-compose.yml  fly.toml  justfile  rust-toolchain.toml  rustfmt.toml
.githooks/: commit-msg
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy-db-production.yml  deploy-db-staging.yml  deploy-production.yml  rollback-production.yml
config/: dev.toml  production.toml  staging.toml  test.toml
deploy/: backend-production.toml  backend-staging.toml  db-production.toml  db-staging.toml
docs/: product-discovery.md  roadmap.md
docs/adr/: 0000-template.md  0001-single-database-multi-tenancy.md  0002-hybrid-error-handling.md  0003-eight-package-hexagonal-layout.md  0004-surrealdb-as-data-store.md  0005-jwt-issuance-via-port-verification-at-edges.md  0006-membership-relation-instead-of-school-id.md  0007-host-based-routing-for-single-binary.md  0008-subdomain-based-tenant-identification.md  0009-rename-jwt-to-tokens.md  0010-remove-mobile-api-package.md  0011-fly-io-for-backend-deployment.md  0012-role-based-access-not-separate-admin-apis.md  0013-token-verifier-as-port-not-adapter-dependency.md  0014-conventional-commit-version-bumping.md  0015-bsl-1-1-license.md  0016-surrealdb-3-upgrade.md  0017-lint-strategy-clippy-pedantic-cargo-deny.md  0018-release-profile-size-optimized.md  0019-single-health-endpoint-in-composition-root.md  0020-banned-crates-policy.md  0021-dependabot-for-dependency-updates.md  0022-official-base-images-only.md  0023-surrealdb-on-fly-io-colocated-with-backend.md  0024-no-public-database-exposure.md  0025-per-api-test-projects.md  0026-squash-merge-for-pull-requests.md  0027-staging-mirrors-production-config.md  0028-ci-artifact-passing-for-test-jobs.md  0029-staging-region-amsterdam.md  0030-twelve-factor-app-principles.md  0031-unix-only-target.md  0032-layered-config-with-figment.md  0033-self-sufficient-config-files.md  0034-secrets-only-from-environment.md  0035-self-describing-code-over-comments.md  0036-forbid-unsafe-rust.md  README.md
scripts/: bootstrap.sh
sitehub-admin-api/: Cargo.toml
sitehub-admin-api-tests/: Cargo.toml
sitehub-admin-api-tests/src/: lib.rs
sitehub-admin-api/src/: lib.rs
sitehub-app/: Cargo.toml
sitehub-app/src/: lib.rs
sitehub-auth-api/: Cargo.toml
sitehub-auth-api-tests/: Cargo.toml
sitehub-auth-api-tests/src/: lib.rs
sitehub-auth-api/src/: lib.rs
sitehub-bin/: Cargo.toml
sitehub-bin/src/: config.rs  main.rs
sitehub-public-api/: Cargo.toml
sitehub-public-api-tests/: Cargo.toml
sitehub-public-api-tests/src/: lib.rs
sitehub-public-api/src/: lib.rs
sitehub-storage/: Cargo.toml
sitehub-storage/src/: lib.rs
sitehub-tokens/: Cargo.toml
sitehub-tokens/src/: lib.rs
