[package]
name = "sitehub-auth-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sitehub-app = { workspace = true }
anyhow      = { workspace = true }
axum        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
