[package]
name = "sitehub-public-api-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
