[package]
name = "sitehub-tokens"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sitehub-app    = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
jsonwebtoken   = { workspace = true }
serde          = { workspace = true }
chrono         = { workspace = true }
